--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-  "name": "timeline-drift",
-  "version": 2,
-  "cleanUrls": true,
-  "framework": null,
-  "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
+    "version": 2,
+    "cleanUrls": true
 }
